--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,95 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [
+    debug_info,
+    warn_unused_vars,
+    warnings_as_errors,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    strict_validation,
+    warn_export_vars,
+    warn_exported_vars,
+    warn_untyped_record,
+    warn_missing_spec,
+    warn_missing_doc
+]}.
+
 {deps, [{prometheus, "~> 4.0"}]}.
 
-{pre_hooks,
- [{"linux|darwin", compile, "make -C c_src"},
-  {"freebsd", compile, "gmake -C c_src"}]}.
-{post_hooks,
- [{"linux|darwin", clean, "make -C c_src clean"},
-  {"freebsd", clean, "gmake -C c_src clean"}]}.
+{pre_hooks, [
+    {"linux|darwin", compile, "make -C c_src"},
+    {"freebsd", compile, "gmake -C c_src"}
+]}.
+{post_hooks, [
+    {"linux|darwin", clean, "make -C c_src clean"},
+    {"freebsd", clean, "gmake -C c_src clean"}
+]}.
 
-{plugins, [{rebar3_archive_plugin, "0.0.2"},
-           rebar3_hex]}.
+{dialyzer, [
+    {warnings, [no_return, error_handling, unknown]},
+    {plt_extra_apps, [prometheus]}
+]}.
+
+{xref_extra_paths, []}.
+{xref_checks, [
+    undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    deprecated_function_calls,
+    deprecated_functions
+]}.
+
+{profiles, [
+    {test, [
+        {erl_opts, [nowarn_missing_spec, nowarn_missing_doc]},
+        {covertool, [{coverdata_files, ["eunit.coverdata", "ct.coverdata"]}]},
+        {cover_enabled, true},
+        {cover_export_enabled, true}
+    ]}
+]}.
+
+{project_plugins, [
+    {rebar3_hex, "~> 7.0.8"},
+    {rebar3_lint, "~> 3.2.6"},
+    {rebar3_ex_doc, "~> 0.2.25"},
+    {erlfmt, "~> 1.6.0"},
+    {covertool, "~> 2.0.7"}
+]}.
+
+{hex, [{doc, #{provider => ex_doc}}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/prometheus-erl/prometheus_process_collector">>},
+    {main, <<"readme">>},
+    {extras, [
+        {'README.md', #{title => <<"Overview">>}},
+        {'LICENSE', #{title => <<"License">>}}
+    ]}
+]}.
+
+{erlfmt, [
+    write,
+    {files, [
+        "include/**/*.{hrl,erl,app.src}",
+        "src/**/*.{hrl,erl,app.src}",
+        "test/**/*.{hrl,erl,app.src}",
+        "rebar.config"
+    ]}
+]}.
+
+{elvis, [
+    #{
+        dirs => ["src"],
+        filter => "*.erl",
+        ruleset => erl_files
+    },
+    #{
+        dirs => ["."],
+        filter => "rebar.config",
+        ruleset => rebar_config
+    }
+]}.
